RESOLVED FIXED49290
[Chromium] Fix mouse-up clickCount on the Mac, and in plugins
https://bugs.webkit.org/show_bug.cgi?id=49290
Summary [Chromium] Fix mouse-up clickCount on the Mac, and in plugins
Stuart Morgan
Reported 2010-11-09 17:21:38 PST
Created attachment 73441 [details] Fix clickCount for mouse-up This fixes two issues with clickCount on mouseup (for http://crbug.com/62348): - clickCount was never set for any mouse up event on the Mac during the conversion from native NSEvent objects - clickCount was not being passed down into WebKit internals for events dispatched by the plugin mouse capture system
Attachments
Fix clickCount for mouse-up (1.35 KB, patch)
2010-11-09 17:21 PST, Stuart Morgan
no flags
Fix clickCount for mouse-up (correct patch format) (2.36 KB, patch)
2010-11-10 16:00 PST, Stuart Morgan
no flags
Stuart Morgan
Comment 1 2010-11-10 16:00:30 PST
Created attachment 73551 [details] Fix clickCount for mouse-up (correct patch format) Now with ChangeLog
Dimitri Glazkov (Google)
Comment 2 2010-11-16 09:59:10 PST
Comment on attachment 73551 [details] Fix clickCount for mouse-up (correct patch format) Good catch, thanks for the patch. All you need now is add a test here: http://google.com/codesearch/p#OAMlx_jo-ck/src/third_party/WebKit/WebKit/chromium/tests/PopupMenuTest.cpp&exact_package=chromium
Stuart Morgan
Comment 3 2010-11-16 11:02:20 PST
It's unclear to me how to test this in the current infrastructure. - The plugin-level is problematic because Mac plugins have two different event models, and only one of them provides clickCount. So, changing the test plugin to log clickCount doesn't seem like an option, since the logging would change based on the event model (which is currently not the case; it's deliberately normalized between the two) - The factory-level requires an actual NSEvent. The tests that I see fabricate events using one of the WebKit-internal structures, not actual OS events.
Dimitri Glazkov (Google)
Comment 4 2010-11-16 11:08:12 PST
(In reply to comment #3) > It's unclear to me how to test this in the current infrastructure. > - The plugin-level is problematic because Mac plugins have two different event models, and only one of them provides clickCount. So, changing the test plugin to log clickCount doesn't seem like an option, since the logging would change based on the event model (which is currently not the case; it's deliberately normalized between the two) > - The factory-level requires an actual NSEvent. The tests that I see fabricate events using one of the WebKit-internal structures, not actual OS events. Ok. Given that this is a pretty clear oversight in a rarely-changing code, I am happy to file a bug on this and r+ the patch.
Dimitri Glazkov (Google)
Comment 5 2010-11-16 11:09:24 PST
Comment on attachment 73551 [details] Fix clickCount for mouse-up (correct patch format) View in context: https://bugs.webkit.org/attachment.cgi?id=73551&action=review Please file a bug on test infrastructure. > WebKit/chromium/ChangeLog:13 > + (WebKit::WebViewImpl::handleInputEvent): For your future WebKit patches, it's a good form to specify here what changed.
WebKit Commit Bot
Comment 6 2010-11-17 02:02:35 PST
Comment on attachment 73551 [details] Fix clickCount for mouse-up (correct patch format) Clearing flags on attachment: 73551 Committed r72181: <http://trac.webkit.org/changeset/72181>
WebKit Commit Bot
Comment 7 2010-11-17 02:02:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.