2010-11-17  Stuart Morgan  <stuartmorgan@chromium.org>

Reviewed by Dimitri Glazkov.

        Fix click count for mouse-up events.
        - clickCount for mouse up was lost in conversion from NSEvent
        - clickCount was also lost when disptaching events through the
        plugin mouse capture event codepath.

        https://bugs.webkit.org/show_bug.cgi?id=49290

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleInputEvent):
        * src/mac/WebInputEventFactory.mm:
        (WebKit::WebInputEventFactory::mouseEvent):

Canonical link: https://commits.webkit.org/62643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72181 268f45cc-cd09-0410-ab3c-d52691b4dbfc